--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,17 @@
 		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 		<version>3.0.1</version>
 	</dependency>
+	<!-- jackson databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.19.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.datatype</groupId>
+	    <artifactId>jackson-datatype-jsr310</artifactId>
+	    <version>2.19.0</version>
+	</dependency>
 	
  </dependencies>
   <build>
