--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
   		<param-value>/WEB-INF/spring/servlet-context.xml</param-value>
   	</init-param>
   	<load-on-startup>1</load-on-startup>
+  	<multipart-config>
+  		<max-file-size>20971520</max-file-size> <!-- 최대 크기 1MB * 20 -->
+  		<max-request-size>41943040</max-request-size> <!-- 1MB * 40 -->
+  		<file-size-threshold>20971520</file-size-threshold> <!-- 1MB * 20 -->
+  	</multipart-config>
   </servlet>
   <servlet-mapping>
   	<servlet-name>appServlet</servlet-name>
